
# add here all files
data_DATA = businessman.tuberling cool.tuberling cyclop.tuberling dali.tuberling \
            einstein.tuberling fly.tuberling grandpa.tuberling \
            idiot.tuberling miss.tuberling picasso.tuberling serious.tuberling \
            crazy.tuberling hippie.tuberling

datadir = $(kde_datadir)/ktuberling/museum
