
# add here all files
data_DATA = businessman.tuberling cool.tuberling cyclop.tuberling dali.tuberling \
            einstein.tuberling fly.tuberling grandpa.tuberling happy.tuberling \
            idiot.tuberling miss.tuberling mouse.tuberling picasso.tuberling \
            serious.tuberling \
            crazy.tuberling hippie.tuberling \
            sea.tuberling

datadir = $(kde_datadir)/ktuberling/museum
