
# add here all files
ktuberling_DATA = businessman.tuberling cool.tuberling cyclop.tuberling dali.tuberling \
            einstein.tuberling fly.tuberling grandpa.tuberling happy.tuberling \
            idiot.tuberling miss.tuberling mouse.tuberling picasso.tuberling \
            serious.tuberling \
            crazy.tuberling hippie.tuberling \
            sea.tuberling

ktuberlingdir = $(kde_datadir)/ktuberling/museum
