
# add here all files
pics_DATA = penguin-game.png penguin-mask.png \
            potato-game.png potato-mask.png \
            aquarium-game.png aquarium-mask.png \
            criminal-game.png criminal-mask.png \
            farm-game.png farm-mask.png \
            autumn-game.png autumn-mask.png \
            shadows-game.png shadows-mask.png \
            street-game.png street-mask.png \
            transports-game.png transports-mask.png \
            layout.xml

picsdir = $(kde_datadir)/ktuberling/pics
