



########### install files ###############

install( FILES bow.wav ear.wav eye.wav hat.wav moustache.wav nose.wav sunglasses.wav tv_bicycle.wav tv_cyclist.wav tv_tree.wav
earring.wav eyebrow.wav hair.wav moon_sign.wav mouth.wav spectacles.wav tie.wav tv_car.wav tv_train.wav DESTINATION ${DATA_INSTALL_DIR}/ktuberling/sounds/en )

install( FILES en.soundtheme DESTINATION ${DATA_INSTALL_DIR}/ktuberling/sounds/ )
