



########### install files ###############

install( FILES bow.ogg ear.ogg eye.ogg hat.ogg moustache.ogg nose.ogg sunglasses.ogg tv_bicycle.ogg tv_cyclist.ogg tv_tree.ogg
earring.ogg eyebrow.ogg hair.ogg moon_sign.ogg mouth.ogg spectacles.ogg tie.ogg tv_car.ogg tv_train.ogg DESTINATION ${DATA_INSTALL_DIR}/ktuberling/sounds/en )

install( FILES en.soundtheme DESTINATION ${DATA_INSTALL_DIR}/ktuberling/sounds/ )
