
# add here all files
data_DATA = badge.ogg bow.ogg cigar.ogg ear.ogg earring.ogg eye.ogg eyebrow.ogg\
	    hat.ogg moustache.ogg mouth.ogg nose.ogg spectacles.ogg \
	    sunglasses.ogg tuberling.ogg watch.ogg

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/ktuberling/sounds/en

# DONT ADD TRANSLATIONS HERE
