
# add here all files
sound_DATA = badge.wav bow.wav cigar.wav ear.wav earring.wav eye.wav eyebrow.wav\
	    hat.wav moustache.wav mouth.wav nose.wav spectacles.wav \
	    sunglasses.wav tuberling.wav watch.wav \
            farm.wav calf.wav cat.wav chicks.wav colt.wav cow.wav dog.wav \
            hen.wav horse.wav pig.wav piglet.wav rooster.wav \
            autumn-landscape.wav acorn.wav chestnuts.wav leave.wav leaves.wav \
            mushroom.wav puddle.wav rain.wav squirrel.wav tree.wav \
            shadows.wav \
            street.wav airplane.wav ambulance.wav balloon.wav bus.wav car.wav \
            cyclist.wav nurse.wav pedestrian.wav police.wav sign.wav \
            transports.wav bicycle.wav motorbike.wav ship.wav submarine.wav \
            train.wav

sounddir = $(kde_datadir)/ktuberling/sounds/en

# DONT ADD TRANSLATIONS HERE
