
# add here all files
data_DATA = badge.wav bow.wav cigar.wav ear.wav earring.wav eye.wav eyebrow.wav\
	    hat.wav moustache.wav mouth.wav nose.wav spectacles.wav \
	    sunglasses.wav tuberling.wav watch.wav

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/ktuberling/sounds/en

