
# add here all files
data_DATA = bouche.wav boucle-d-oreille.wav chapeau.wav cigare.wav \
	lunettes-de-soleil.wav lunettes.wav medaille.wav monsieur-patate.wav \
	montre.wav moustache.wav nez.wav noeud-papillon.wav oeil.wav \
	oreille.wav sourcil.wav

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/ktuberling/sounds/fr

