
# add here all files
data_DATA = ceas.wav cercel.wav gura.wav insigna.wav mustata.wav \
            nas.wav ochelari.wav ochelaridesoare.wav ochi.wav \
            palarie.wav papion.wav sprinceana.wav tigara.wav \
            tuberling.wav ureche.wav    

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/ktuberling/sounds/ro

