# add here all files
data_DATA = cigara.wav klobuk.wav masna.wav metuljcek.wav \
	naocniki.wav nos.wav obrvi.wav oko.wav pentlja.wav \
	soncna_ocala.wav tuberling.wav uhan.wav uho.wav \
	ura.wav usta.wav vozel.wav znacka.wav

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/ktuberling/sounds/sl
